--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,11 @@
+S3method(layer_clone,list)
+S3method(layer_clone,proto)
+S3method(layer_clone,sp_layer)
+S3method(ply_aes,list)
+S3method(ply_aes,proto)
+S3method(ply_aes,sp_layer)
+S3method(print,ggsubplot)
+S3method(print,rel)
 export(add_gid)
 export(aesply)
 export(apply_maps)
@@ -12,8 +20,8 @@ export(geom_subplot)
 export(geom_subplot2d)
 export(get_xs)
 export(get_ys)
-export(ggsubplot_build)
 export(ggsubplot)
+export(ggsubplot_build)
 export(globalize)
 export(interval_breaks)
 export(is.rel)
@@ -28,20 +36,21 @@ export(rel)
 export(rescale_01)
 export(rescale_11)
 export(rescale_2pi)
-export(sp_layer_build)
 export(sp_layer)
+export(sp_layer_build)
 export(vet)
 exportClasses(environment)
+exportClasses(gg)
 exportClasses(ggplot)
 exportClasses(ggsubplot)
 exportClasses(list)
 exportClasses(proto)
 exportClasses(sp_layer)
-exportMethods("[")
-exportMethods("[<-")
-exportMethods("+")
 exportMethods("$")
 exportMethods("$<-")
+exportMethods("+")
+exportMethods("[")
+exportMethods("[<-")
 exportMethods(c)
 exportMethods(ls)
 exportMethods(rep)
@@ -52,11 +61,3 @@ import(plyr)
 import(proto)
 import(scales)
 import(stringr)
-S3method(layer_clone,list)
-S3method(layer_clone,proto)
-S3method(layer_clone,sp_layer)
-S3method(ply_aes,list)
-S3method(ply_aes,proto)
-S3method(ply_aes,sp_layer)
-S3method(print,ggsubplot)
-S3method(print,rel)
