--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: ggsubplot
-Maintainer: Garrett Grolemund <grolemund@rice.edu>
+Maintainer: Garrett Grolemund <garrett@rstudio.com>
 License: GPL
 Title: Explore complex data by embedding subplots within plots.
 LazyData: true
 Type: Package
-Author: Garrett Grolemund <grolemund@rice.edu>, Hadley Wickham
-        <h.wickham@gmail.com>
-Description: ggsubplot makes it easy to embed customized subplots
-        within larger graphics. Subplots may be used as a geom to
-        explore interaction effects, spatial data, and hierarchical
-        data. Subplots can also be used to explore big data without
-        overplotting.
-Version: 0.2.0
+Author: Garrett Grolemund <garrett@rstudio.com>, Hadley
+    Wickham <h.wickham@gmail.com>
+Description: ggsubplot makes it easy to embed customized
+    subplots within larger graphics. Subplots may be used
+    as a geom to explore interaction effects, spatial data,
+    and hierarchical data. Subplots can also be used to
+    explore big data without overplotting.
+Version: 0.3.1
 Imports: ggplot2, plyr, proto, grid, scales, stringr
 Depends: methods, R (>= 2.15)
 Collate: 'aesply.r' 'data.r' 'geom_coxcomb.r' 'geom_star.r'
@@ -19,6 +19,7 @@ Collate: 'aesply.r' 'data.r' 'geom_coxcomb.r' 'geom_star.r'
         'ggsubplot_build.r' 'merge_overlaps.r' 'package.r' 'ply_aes.r'
         'ref_box.r' 'rel-class.r' 'rescalers.r' 'sp_layer-class.r'
         'sp_layer_build.r' 'util.r' 'geom_freqstar.r'
-Packaged: 2012-09-10 22:51:11 UTC; garrettgrolemund
+Packaged: 2013-11-26 14:52:53 UTC; garrettgrolemund
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-09-11 06:14:20
+Date/Publication: 2013-11-26 16:51:15
